spark broadcasting variables

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.keys
+*.pem
 venv*
 .venv*
 *venv*
@@ -9,5 +11,7 @@ __pycache__
 venv
 .venv
 venv_spark_intellisense
+./.venv_pyspark_intellisense/lib/python3.9/site-packages/pyspark/jars/hadoop-client-runtime-3.3.2.jar
+./.venv_pyspark_intellisense/lib/python3.9/site-packages/pyspark/jars/rocksdbjni-6.20.3.jar
 ./.venv_pyspark_intellisense/lib/python3.9/site-packages/pyspark/jars/hadoop-client-runtime-3.3.2.jar
 ./.venv_pyspark_intellisense/lib/python3.9/site-packages/pyspark/jars/rocksdbjni-6.20.3.jar
